--- a/index.html
+++ b/index.html
@@ -44,21 +44,22 @@
                     </a>
                 </div>
                 <div class="card card2">
-                     <a href="https://fatimakazim.github.io/website-page/" >
+                    <a href="https://fatimakazim.github.io/website-page/">
                         <h5>Websites</h5>
                         <p></p>
+                    </a>
                 </div>
                 <div class="card card3">
-                    <h5>Social Media Graphics</h5>
-                    <a href="https://fatimakazim.github.io/Graphics-pagereal/"></a>
-                    
-                    <p></p>
+                    <a href="https://fatimakazim.github.io/Graphics-pagereal/">
+                        <h5>Social Media Graphics</h5>
+                        <p></p>
+                    </a>
                 </div>
                 <div class="card card4">
-                    <h5>3-D Modeling</h5>
-                    <a href="https://fatimakazim.github.io/3-D-page/"></a>
-                    
-                    <p></p>
+                    <a href="https://fatimakazim.github.io/3-D-page/">
+                        <h5>3-D Modeling</h5>
+                        <p></p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -66,4 +67,3 @@
 </body>
 
 </html>
-
