--- a/index.html
+++ b/index.html
@@ -67,4 +67,10 @@
 </body>
 
 </html>
+<script>
+    document.querySelector('.burger').addEventListener('click', () => {
+        document.querySelector('.nav-links').classList.toggle('active');
+    });
+</script>
+
 
