--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             text-decoration: none;
         }
     </style>
+     <style>
+        h5, p {
+            margin-bottom: 20px; 
+        }
+    </style>
 </head>
 
 <body>
@@ -34,7 +39,11 @@
         <div class="row">
             <div class="col">
                 <h1>Hello</h1>
-                <p>My name is Fatima Kazim, welcome to my portfolio!</p>
+                <p> My name is Fatima Kazim </p>
+                
+                <p> I am a junior at NYU Shanghai majoring in Interactive Media Arts </p>
+                
+                <h5>Welcome to my portfolio!</h5>
             </div>
             <div class="col">
                 <div class="card card1">
