--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <div class="row">
             <div class="col">
                 <h1>Hello</h1>
-                <p> My name is Fatima Kazim </p>
+                <h5> My name is Fatima Kazim </h5>
                 
-                <p> I am a junior at NYU Shanghai majoring in Interactive Media Arts </p>
+                <h5> I am a junior at NYU Shanghai majoring in Interactive Media Arts </h5>
                 
                 <h5>Welcome to my portfolio!</h5>
             </div>
